# PanopticPipeline

./: .gitignore  .gitmodules  CPM_reproject_hands_faces_coco19.m  Dockerfile  DomeCalib.sh  DomeCalib_norm_check.sh  EncodeVideos  README.md  SEQ_INFO.py  config.py  matCaffeConfig.m  nv.ini  reconstruction.py  run.py  script_calibImgExt.sh  script_face.m  script_indexMapGen_auto.py  videoGen_hd.sh
MISC/: copy_to_domdbweb.py  merge_body_hand_face.py  runCopyScript.sh
Social-Capture-Ubuntu/DomeBundle/: BAutil.cpp  BAutil.h  CMakeLists.txt  DomeCalibUtil.cpp  DomeCalibUtil.h  main.cpp  ransac_headeronly.h
Social-Capture-Ubuntu/DomeCorres/: BAutil.cpp  BAutil.h  CMakeLists.txt  DomeCorresSIFT.cpp  DomeCorresSIFT.h  main.cpp  strlib.cpp  strlib.h
Social-Capture-Ubuntu/SFMProject/: CMakeLists.txt  Constants.cpp  Constants.h  DataStructures.cpp  DataStructures.h  DomeImageManager.cpp  DomeImageManager.h  ImportExportDlg.cpp  ImportExportDlg.h  PatchOptimization.cpp  PatchOptimization.h  SyncMan.cpp  SyncMan.h  TrajElement3D.cpp  TrajElement3D.h  Utility.cpp  Utility.h  UtilityGPU.cu  UtilityGPU.h  main.cpp
Social-Capture-Ubuntu/SFMProject/Module_BodyPose/: BodyPoseReconDM.cpp  BodyPoseReconDM.h  BodyPoseReconDT.cpp  BodyPoseReconDT.h  SkeletonGeneratorDlg.cpp  SkeletonGeneratorDlg.h
Social-Capture-Ubuntu/SFMProject/Module_Face_PM/: FaceReconByPMDM.cpp  FaceReconByPMDM.h  FaceReconByPMDT.h  FaceReconByPMDlg.cpp  FaceReconByPMDlg.h
Social-Capture-Ubuntu/SFMProject/Module_Hand/: HandReconDM.cpp  HandReconDM.h  HandReconDT.h  HandReconDlg.cpp  HandReconDlg.h
Social-Capture-Ubuntu/SFMProject/Module_VisualHull/: VisualHullModule.cpp  VisualHullModule.h
bvlcsh/caffe/: CMakeLists.txt  Makefile  Makefile.config
bvlcsh/caffe/include/caffe/: cpm_data_transformer.hpp  cpm_st_data_transformer.hpp
bvlcsh/caffe/include/caffe/layers/: cpm_st_data_layer.hpp  hypercolumn_layer.hpp  imresize_layer.hpp.orig  imwarp_layer.hpp
bvlcsh/caffe/include/caffe/util/: math_functions.hpp
bvlcsh/caffe/python/caffe/: net_spec.py
bvlcsh/caffe/python/caffe/proto/: caffe_pb2.py
bvlcsh/caffe/src/caffe/: blob.cpp  cpm_data_transformer.cpp  cpm_st_data_transformer.cpp
bvlcsh/caffe/src/caffe/layers/: cpm_data_layer.cpp  cpm_st_data_layer.cpp  hypercolumn_layer.cpp  hypercolumn_layer.cu  imwarp_layer.cpp  imwarp_layer.cu  pooling_layer.cpp
bvlcsh/caffe/src/caffe/proto/: caffe.proto
bvlcsh/caffe/src/caffe/util/: math_functions.cpp
bvlcsh/caffe/tools/extra/: parse_log.py  plot_training_log.py  plot_training_log_bokeh.py  plot_training_log_plotly.py
caffe_demo/: Makefile.config  hd_merger_arg.sh  peakdetect_hd_raw_arg.sh  peakdetect_vga_raw.sh  peakdetect_vga_raw_arg.sh  run.sh  run_dome.sh  run_multi.sh  run_multi2.sh  run_multi_hd.sh  vga_merger_arg.sh
caffe_demo/examples/rtpose/: poseResultMerger.cpp  poseResultMerger_hd.cpp  rtpose.cpp  rtpose_han.cpp  rtpose_han_hd.cpp  rtpose_singleThread_back.cpp_
caffe_demo/include/caffe/util/: blocking_queue.hpp
caffe_demo/src/caffe/util/: FrameExtractUtil.cpp  FrameExtractUtil.h  SyncManager.cpp  SyncManager.h  pfcmu_config.h
matlab_hand_face/: CPM_reproject_hands_coco19.m  CPM_reproject_hands_faces_coco19.m  Converter_hand_json2txt_single.m  Func_Converter_face_json2txt.m  PoseLoaderJson.m  PoseLoaderJson19.m  PoseProject2D.m  applyModel_giveCenterAndScale.m  matCaffeConfig.m  script_face.m  script_hand_v143_han.m
