set(CMAKE_C_COMPILER /usr/bin/gcc-5)
set(CMAKE_CXX_COMPILER /usr/bin/g++-5)
set(CMAKE_CXX_STANDARD 11)
cmake_minimum_required (VERSION 2.8)
project(DomeBundle)


find_package(OpenMP REQUIRED)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wpedantic -Wall -Wextra")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
find_package( PkgConfig )
pkg_check_modules( EIGEN3 REQUIRED eigen3 )
include_directories(${EIGEN3_INCLUDE_DIRS})
set(OpenCV_DIR "/home/donglaix/tools/opencv-2.4.10/build/")
find_package( OpenCV 2.4 REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)
find_package(Ceres REQUIRED COMPONENTS SuiteSparse)

add_executable(DomeBundle main.cpp BAutil.cpp DomeCalibUtil.cpp)
target_link_libraries(DomeBundle ${OpenCV_LIBS} ${Boost_LIBRARIES} ${CERES_LIBRARIES} )
