set(CMAKE_C_COMPILER /usr/bin/gcc-5)
set(CMAKE_CXX_COMPILER /usr/bin/g++-5)
cmake_minimum_required (VERSION 2.8)
project(SFMProject)

find_package(CUDA REQUIRED)
find_package(OpenMP REQUIRED)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wpedantic -Wall -Wextra -std=c++11")
find_package( PkgConfig )
pkg_check_modules( EIGEN3 REQUIRED eigen3 )
include_directories(${EIGEN3_INCLUDE_DIRS})
set(OpenCV_DIR "/home/donglaix/tools/opencv-2.4.9/build/")
find_package(OpenCV 2.4 REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)
find_package(Ceres REQUIRED COMPONENTS SuiteSparse)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
include_directories("./")
include_directories("./Module_BodyPose/")
include_directories("./Module_VisualHull/")
include_directories("./Module_Face_PM/")

file(GLOB SOURCES "./*.cpp" "./UtilityGPU.cu")
file(GLOB BODY_SOURCES "./Module_BodyPose/*.cpp")
list(APPEND SOURCES ${BODY_SOURCES})
file(GLOB VISUALHULL_SOURCES "./Module_VisualHull/*.cpp")
list(APPEND SOURCES ${VISUALHULL_SOURCES})
file(GLOB FACE_SOURCES "./Module_Face_PM/*.cpp")
list(APPEND SOURCES ${FACE_SOURCES})

add_definitions(-DLINUX_COMPILE)
# add_executable(SFMProject ${SOURCES})
cuda_add_executable(SFMProject ${SOURCES})
target_link_libraries(SFMProject ${OpenCV_LIBS} ${Boost_LIBRARIES} ${CERES_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLEW_LIBRARY})
# target_link_libraries(SFMProject ${MYCUDA})